src/app/component/layout/components/footer/footer.component.scss
@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto&display=swap');

$generalFont : 'Open Sans';

.main-background-image {
  background-image: url("~/assets/img/icon/footer/background-image-footer.svg");
  background-repeat: no-repeat;
  background-position: center;
  height: 286px;
  width: 100%;

  .main {
    max-width: 1440px;

    .logo {
      margin: 119px 0 24px 0;
    }

    .links {
      display: flex;
      justify-content: space-between;

      .left-side {

        .list-of-site-links {
          display: flex;
          justify-content: space-around;
          list-style-type: none;
          padding: 0;
          margin-bottom: 24px;

          .router-links {
            text-decoration: none;
            font-family: $generalFont;
            font-size: 14.07px;;
            line-height: 16px;
            color: #494A49;
            margin-right: 32px;
            padding-top: 3px;
          }
        }
      }

      .right-side {
        display: flex;
        align-items: center;

        .follow-us-text {
          margin-right: 16px;

          p {
            font-family: $generalFont;
            font-size: 14px;
            line-height: 16px;
            margin: 0;
            color: #494A49;
          }
        }

        .social-network-links {
          display: flex;
          justify-content: space-around;
          list-style-type: none;
          margin: 0;
          padding: 0;

          .social-links-btn {
            margin-right: 16px;

              .twitter-link-btn{
                width: 15px;
                height: 12.19px;
            }
          }

          .last-item {
            margin-right: 0;
          }
        }
      }
    }

    .bottom-part {
      margin-top: 39px;
      margin-bottom: 12px;
      text-align: center;
      font-family: $generalFont;
      font-size: 14px;
      line-height: 16px;
      color: #878787;
    }

    @media screen and (max-width: 1024px) {
      .logo {
        margin: 137px 0 24px 0;
      }
    }

    @media screen and (max-width: 768px) {
      .logo {
        margin: 137px 0 24px 0;
      }
    }

    @media screen and (max-width: 668px) {
      .links {
        display: block;

        .left-side {
          .list-of-site-links {
            justify-content: flex-start;
          }
        }

        .right-side {
          .social-network-links {
            display: flex;
            justify-content: flex-start;
            padding: 0;
          }
        }
      }
    }

    @media screen and (max-width: 468px) {
      .small-screen-size {
        display: flex;
        justify-content: center;
      }

      .logo {
        margin: 137px 0 40px 0;
      }

      .links {
        .left-side {
          .list-of-site-links {
            display: flex;
            flex-direction: column;
            align-items: center;
            margin-bottom: 16px;

            &:nth-child(-n+4) {
              li {
                .router-links {
                  display: block;
                  margin: 0 0 24px 0;
                }
              }
            }
          }
        }

        .right-side {
          display: flex;
          flex-direction: column;
          align-items: center;

          .follow-us-text {
            margin: 0 0 21px 0;
          }
        }
      }
    }

    @media screen and (max-width: 320px) {
      .bottom-part{
        margin-top: 24px;
      }
    }
  }
}

@media screen and (min-width: 1024px) {
  .main {
    margin: 0 10.4%;
  }
}

@media screen and (max-width: 1024px) {
  .main {
    margin: 0 3.125%
  }
}

@media screen and (max-width: 768px) {
  .main {
    margin: 0 1.82%
  }
}
@media screen and (max-width: 576px) {
  .main {
    margin: 0 2.4%
  }
}

@media screen and (max-width: 320px) {
  .main {
    margin: 0 auto;
  }
}

